--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -25,13 +25,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: 'npm'
+      
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       
       - name: Install dependencies
         run: npm ci
       
       - name: Build with Next.js
         run: npm run build
+        env:
+          NODE_ENV: production
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
